MLE-24402 Merging submodules
No need for separate modules now that Java 17 is required.

Pure refactor / moving of furniture - no behavior is changing here. Though the code coverage report should work again soon (may require a follow up PR).