@@ -10,21 +10,58 @@ configurations {
   // with Spark.
   shadowDependencies
 
-  // Allows for Java 17-specific dependencies to be declared so that they can be added to the shadowJar, but also
-  // not included on the compile classpath for the connector. These dependencies are also declared in the "tests"
-  // project as test dependencies so that they can be tested. These are separate from shadowDependencies, as those
-  // are on the compile classpath. But we don't want the connector to require any Java 17 dependencies to be on the
-  // compile classpath so that we can still compile it using Java 11.
-  java17Dependencies
-
   // This approach allows for all of the dependencies to be available for compilation and for running tests.
   compileOnly.extendsFrom(shadowDependencies)
+  testImplementation.extendsFrom(compileOnly)
 }
 
 dependencies {
   compileOnly "org.apache.spark:spark-sql_2.13:${sparkVersion}"
-  shadowDependencies project(":marklogic-spark-api")
-  java17Dependencies project(":marklogic-langchain4j")
+
+  shadowDependencies("com.marklogic:marklogic-client-api:7.2.0") {
+    // Need to use the versions of Jackson preferred by Spark.
+    exclude group: "com.fasterxml.jackson.core"
+    exclude group: "com.fasterxml.jackson.dataformat"
+  }
+
+  // This is compileOnly as Spark will provide its own copy at runtime.
+  compileOnly "com.fasterxml.jackson.core:jackson-databind:2.17.2"
+
+  // For logging.
+  shadowDependencies "org.slf4j:jcl-over-slf4j:2.0.17"
+
+  // Needed for splitting XML documents via XPath.
+  shadowDependencies "jaxen:jaxen:2.0.0"
+
+  // Needed for classifying documents via Semaphore.
+  shadowDependencies("com.smartlogic.csclient:Semaphore-CS-Client:${semaphoreVersion}") {
+    exclude group: "com.fasterxml.jackson.core"
+  }
+  shadowDependencies("com.smartlogic.cloud:Semaphore-Cloud-Client:${semaphoreVersion}") {
+    exclude group: "com.fasterxml.jackson.core"
+  }
+
+  // Adding this in 2.6.0. tika-core is very small and only brings in commons-io and and slf4j-api. Flux can then
+  // include the necessary parsers.
+  shadowDependencies "org.apache.tika:tika-core:${tikaVersion}"
+
+  // Needed for using XmlMapper.
+  shadowDependencies("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.17.2") {
+    // Not needed, as the modules in this group that this dependency depends on are all provided by Spark.
+    exclude group: "com.fasterxml.jackson.core"
+  }
+
+  // Supports reading and writing RDF data. Including this here so it's available to the tests as well.
+  // Bumped to 5.x, which requires Java 17, while upgrading Spark to 4.x.
+  shadowDependencies("org.apache.jena:jena-arq:5.5.0") {
+    exclude group: "com.fasterxml.jackson.core"
+    exclude group: "com.fasterxml.jackson.dataformat"
+  }
+
+  // Needed for some XML operations that are far easier with JDOM2 than with DOM.
+  shadowDependencies "org.jdom:jdom2:2.0.6.1"
+
+  shadowDependencies "dev.langchain4j:langchain4j:${langchain4jVersion}"
 
   // Ensuring the desired version of commons-compress is included in the connector jar. Some tests have failed in Flux
   // because an older version - likely the one depended on by Jena - is included instead.
@@ -33,10 +70,57 @@ dependencies {
   // Need this so that an OkHttpClientConfigurator can be created.
   // Only needs compileOnly, as the Java Client brings this as an implementation dependency.
   compileOnly 'com.squareup.okhttp3:okhttp:4.12.0'
+
+  testImplementation "org.apache.spark:spark-sql_2.13:${sparkVersion}"
+
+  // Supports testing the embedder feature.
+  testImplementation "dev.langchain4j:langchain4j-embeddings-all-minilm-l6-v2:1.5.0-beta11"
+
+  testImplementation('com.marklogic:ml-app-deployer:6.0.1') {
+    exclude group: "com.fasterxml.jackson.core"
+    exclude group: "com.fasterxml.jackson.dataformat"
+
+    // Use the Java Client declared above.
+    exclude module: "marklogic-client-api"
+  }
+
+  testImplementation('com.marklogic:marklogic-junit5:1.5.0') {
+    exclude group: "com.fasterxml.jackson.core"
+    exclude group: "com.fasterxml.jackson.dataformat"
+
+    // Use the Java Client declared above.
+    exclude module: "marklogic-client-api"
+
+    // Use the Spring dependencies from ml-app-deployer 6 to avoid vulnerabilities in Spring 5.
+    exclude group: "org.springframework"
+  }
+
+  // marklogic-junit5 still needs spring-test, but we want the 6 version to minimize vulnerabilities.
+  testImplementation "org.springframework:spring-test:6.2.11"
+
+  testImplementation "ch.qos.logback:logback-classic:1.5.18"
+  testImplementation "org.slf4j:jcl-over-slf4j:2.0.17"
+  testImplementation "org.skyscreamer:jsonassert:1.5.3"
+
+  testImplementation "org.apache.tika:tika-parser-microsoft-module:${tikaVersion}"
+  testImplementation "org.apache.tika:tika-parser-pdf-module:${tikaVersion}"
+}
+
+test {
+  // See https://stackoverflow.com/questions/72724816/running-unit-tests-with-spark-3-3-0-on-java-17-fails-with-illegalaccesserror-cl
+  // for an explanation of why these are needed when running the tests on Java 17.
+  jvmArgs = [
+    '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
+    '--add-exports=java.base/sun.util.calendar=ALL-UNNAMED',
+    '--add-exports=java.base/sun.security.action=ALL-UNNAMED'
+  ]
+
+  // Increased heap size as part of the Spark 4 upgrade, as we started experiencing OOM errors in the tests.
+  jvmArgs '-Xmx6g', '-Xms3g'
 }
 
 shadowJar {
-  configurations = [project.configurations.shadowDependencies, project.configurations.java17Dependencies]
+  configurations = [project.configurations.shadowDependencies]
 
   // "all" is the default; no need for that in the connector filename. This also results in this becoming the library
   // artifact that is published as a dependency. That is desirable as it includes the relocated packages listed below,
@@ -118,7 +202,7 @@ publishing {
   }
 }
 
-task gettingStartedZip(type: Zip) {
+tasks.register("gettingStartedZip", Zip) {
   description = "Creates a zip of the getting-started project that is intended to be included as a downloadable file " +
     "on the GitHub release page."
   from "../examples/getting-started"
